[package]
name = "semestralka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["full", "time"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
